# fmi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Findhiredis.cmake
config/: fmi.json  fmi_test.json  smi.json  smi_test.json
docs/: Doxyfile  footer.html  mainpage.md
example/: client.cpp
include/: Communicator.h  smi.h
include/comm/: CentralChannel.h  Channel.h  ClientServer.h  Data.h  Direct.h  PeerToPeer.h  Redis.h  S3.h
include/utils/: ChannelPolicy.h  Common.h  Configuration.h  Function.h
python/: CMakeLists.txt  PythonCommunicator.cpp  PythonCommunicator.h  fmi_python.cpp  smi_python.cpp
python/aws/python36/: Makefile  template.yml
python/aws/python37/: Makefile  template.yml
python/aws/python38/: Makefile  template.yml
python/aws/python39/: Makefile  template.yml
python/tests/: client.py
src/: Communicator.cpp
src/comm/: CentralChannel.cpp  Channel.cpp  ClientServer.cpp  Direct.cpp  PeerToPeer.cpp  Redis.cpp  S3.cpp
src/utils/: ChannelPolicy.cpp  Configuration.cpp
tests/: CMakeLists.txt  channels.cpp  client.cpp  communicator.cpp  s3.cpp
